--- a/src/App.scss
+++ b/src/App.scss
@@ -178,6 +178,8 @@ input[type=checkbox]{
     flex-direction: column;
     gap: 8px;
     padding: 8px 0 0 0;
+    flex-wrap: wrap;
+    align-items: center;
     p {
       margin: 0;
       img {
