--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 
 :root {
   font-family: Avenir, Helvetica, Arial, sans-serif;
@@ -93,8 +94,4 @@ input[type=text],input[type=number] {
   border-radius: 8px;
   padding: 8px;
   border: 1px solid #c0c0c0;
-}
-
-.actions {
-  margin: 30px 0;
 }
